[project]
name = "blog-agents"
version = "0.1.0"
description = "한국 문화예술 블로그 멀티 에이전트 자동화 시스템"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "googlenewsdecoder>=0.1.7",
]

[project.optional-dependencies]
naver = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
blog-agents = "blog_agents.cli:app"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
